--- a/about.css
+++ b/about.css
@@ -1,4 +1,19 @@
-mi {
+divp {
+    font-size: 28px;
+    font-style: oblique;
+}
+.Abt{
+    font-size: 19px;
+    margin-inline: 60px;
+    text-align: justify;
+  }
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+}
+li {
     display:inline;      
     background-color: #333;
     border: none;
@@ -9,20 +24,8 @@ mi {
     margin: 4px 2px;
     transition: 0.3s;
   }
-
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-}
   
-mi:hover {
+li:hover {
     background-color: #bbd0ff;
     color: white;
   }
@@ -33,7 +36,20 @@ a:visited {
     color: white;
   }
 
-  footer {
+main {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    text-align: center;
+}
+
+button {
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+footer {
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -41,4 +57,19 @@ a:visited {
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+.content-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content-container img {
+    max-width: 100%; 
+    margin-right: 20px; 
+}
+
+/* Style for the paragraph */
+.content-container p {
+    max-width: 60%; /* Adjust the width of the paragraph as needed */
 }
